Lots of EME changes to our scripts and docs
Implemented the "type 1" CableLabs clear key test.  This type has the
JSON embedded in the PSSH.

Updated all dash/encryption scripts to use consistent keys/keyIDs.

Updated the MS PlayReady KeyGen program to use the test server key seed
by default

Updated all encryption scripts to properly check for input media files

Updated documentation with script revisions